--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 2022-04-19
+  Bugfixes:
+    - added migration for old loader names
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2022-04-18
   Features:
