--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 2022-09-21
+  Changes:
+    - removed unused prototype folder
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2022-04-19
   Bugfixes:
